@@ -3,7 +3,8 @@ WebConsole 2.1.3
 
 Fixes:
 
- - Fixed : Console fails to load in Chrome on Mac (WEBCONSOLE-60)
+  - Fixed console fails to load in Chrome on Mac (WEBCONSOLE-60)
+  - Fixed console fails to load when cookies are disabled (WEBCONSOLE-61)
 
 New features:
 
